--- a/index.html
+++ b/index.html
@@ -356,12 +356,14 @@
 						<p><br><b>We can ask questions about the products we buy and all their forms of capital.</b></p>
 						<p><br>We can educate ourselves about the processes and people involved and resist fashion being reduced to a product, a fetishised commodity. We can call into question the oxymoronic nature of sustainable fashion, call into question the promise that we can buy our way out of a crisis that has largely been created by buying stuff, by global mass consumerism, as Greta Thunberg is currently reminding us. Finally, we can question the premise of the current fashion system, which largely relegates us to the role of passive consumers rather than active makers and acknowledge fashion as process and creative human labour.</p>
 					&nbsp;&nbsp;
+					<div class="none"><img src="images/watch.png"></div>
+					&nbsp;&nbsp;
 						<div class="centered_image">
 							<img src="images/large_bb5b6f0b301a9e776b34e22871fd9c10.jpg">
 							<div class="artist_name">Gab Bois</div>
 						</div>
 						&nbsp;&nbsp;
-						<div class="none"><img src="images/watch.png"></div>
+						
 					</article>
 					</div>			
 				</div>
@@ -796,7 +798,7 @@
 						</div>
 						<div class="col_6_normal">
 							<div class="row">
-							<div class="col_9"><h3>What fashion is not (only)<br>Text by Dr Renate Stauss</h3>&nbsp;&nbsp;<h3>Design by Itai Snapier </h3>
+							<div class="col_9"><h3>What fashion is not (only)<br><i>Text by Dr Renate Stauss</i></h3>&nbsp;&nbsp;<h3><i>Design by Itai Snapier</i></h3>
 						</div>
 						<div class="col_3"><img src="images/fire.png"></div></div>
 					</div>
