--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
 					</div>
 					<div class="col_12">
 						<div class="col_12 section_title">
-							<p>Black and <wbr>hite thinking</p>
+							<p>Black and white thinking</p>
 							<div class="number_heading"><h4>7</h4></div>
 							<div class="line"></div>
 						</div>
